--- a/popup.html
+++ b/popup.html
@@ -30,22 +30,40 @@
         display: flex;
         flex-direction: column;
         gap: 5px;
+        margin-bottom: 12px;
       }
       label {
         font-weight: 500;
         color: var(--content-heavy);
         font-size: 14px;
       }
-      input[type="text"] {
+      input[type="text"],
+      input[type="number"] {
         padding: 8px;
         border: 0.8px solid var(--content-block-1);
         border-radius: 4px;
         font-size: 14px;
         background: var(--content-block-1);
       }
-      input[type="text"]:focus {
+      input[type="text"]:focus,
+      input[type="number"]:focus {
         outline: none;
         border-color: var(--brand-theme30);
+      }
+      /* 移除 number 类型输入框的上下箭头 */
+      input[type="number"]::-webkit-outer-spin-button,
+      input[type="number"]::-webkit-inner-spin-button {
+        -webkit-appearance: none;
+        margin: 0;
+      }
+      input[type="number"] {
+        appearance: textfield;
+      }
+
+      .length-input input {
+        width: 100px;
+        font-feature-settings: "tnum";
+        font-variant-numeric: tabular-nums;
       }
       .status-container {
         position: fixed;
@@ -75,6 +93,13 @@
         width: 100%;
         border-collapse: collapse;
         background: white;
+        table-layout: fixed;
+      }
+      .categories-table th:first-child {
+        width: 36%;
+      }
+      .categories-table th:last-child {
+        width: 64%;
       }
       .categories-table th {
         background: var(--content-block-1);
@@ -92,6 +117,7 @@
         padding: 8px 12px;
         border-bottom: 1px solid rgba(0, 0, 0, 0.05);
         vertical-align: middle;
+        word-break: break-word;
       }
       .categories-table tr:hover {
         background: var(--content-block-1);
@@ -102,6 +128,22 @@
         border: 0.8px solid rgba(0, 0, 0, 0.05);
         border-radius: 4px;
         background: white;
+        padding-right: 4px;
+        box-sizing: border-box;
+      }
+      .table-container::-webkit-scrollbar {
+        width: 8px;
+      }
+      .table-container::-webkit-scrollbar-track {
+        background: transparent;
+      }
+      .table-container::-webkit-scrollbar-thumb {
+        background: var(--content-light);
+        border-radius: 4px;
+        border: 2px solid white;
+      }
+      .table-container::-webkit-scrollbar-thumb:hover {
+        background: var(--content-normal);
       }
       .category-name {
         font-weight: 500;
@@ -116,12 +158,18 @@
       .description-input {
         width: 100%;
         height: 32px;
+        min-height: 32px;
         padding: 6px 8px;
         border: 0.8px solid var(--content-block-1);
         border-radius: 4px;
         font-size: 14px;
         resize: none;
         background: var(--content-block-1);
+        box-sizing: border-box;
+        margin: 0;
+        overflow: hidden;
+        line-height: 1.5;
+        display: block;
       }
       .description-input:focus {
         outline: none;
@@ -130,9 +178,7 @@
       .tabs {
         display: flex;
         gap: 10px;
-        margin-bottom: 15px;
-        border-bottom: 1px solid rgba(0, 0, 0, 0.05);
-        padding-bottom: 10px;
+        padding-bottom: 4px;
       }
       .tab {
         padding: 8px 16px;
@@ -191,6 +237,115 @@
       .secondary-button:hover {
         background: linear-gradient(0deg, rgba(0, 0, 0, 0.05) 0%, rgba(0, 0, 0, 0.05) 100%), var(--content-block-1);
       }
+      .form-row {
+        display: flex;
+        align-items: center;
+        gap: 20px;
+      }
+
+      .form-row label {
+        flex: 0 0 80px;
+        text-align: left;
+      }
+
+      .form-row input[type="text"],
+      .form-row input[type="number"] {
+        flex: 1;
+      }
+
+      .input-with-hint {
+        flex: 1;
+        display: flex;
+        flex-direction: column;
+        gap: 4px;
+      }
+
+      .input-with-hint small {
+        color: var(--content-light);
+        font-size: 12px;
+        margin-left: 2px;
+      }
+
+      .length-limit-control {
+        flex: 1;
+        display: flex;
+        align-items: center;
+        gap: 12px;
+      }
+
+      .toggle {
+        position: relative;
+        display: inline-block;
+        width: 32px;
+        height: 20px;
+      }
+
+      .toggle input {
+        opacity: 0;
+        width: 0;
+        height: 0;
+      }
+
+      .toggle-slider {
+        position: absolute;
+        cursor: pointer;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background-color: var(--content-light);
+        transition: 0.4s;
+        border-radius: 20px;
+        width: 32px;
+      }
+
+      .toggle-slider:before {
+        position: absolute;
+        content: "";
+        height: 16px;
+        width: 16px;
+        left: 2px;
+        bottom: 2px;
+        background-color: white;
+        transition: 0.4s;
+        border-radius: 50%;
+      }
+
+      .toggle input:checked + .toggle-slider {
+        background-color: var(--brand-theme);
+      }
+
+      .toggle input:checked + .toggle-slider:before {
+        transform: translateX(12px);
+      }
+
+      .length-input {
+        flex: 1;
+        display: flex;
+        align-items: center;
+        gap: 8px;
+        transition: opacity 0.3s;
+      }
+
+      .length-input.disabled {
+        opacity: 0.5;
+      }
+
+      .length-input input {
+        width: 100px;
+      }
+
+      .length-input .unit {
+        color: var(--content-normal);
+        font-size: 14px;
+      }
+
+      .hint {
+        color: var(--content-light);
+        font-size: 12px;
+        margin-top: 4px;
+        margin-left: 100px;
+      }
     </style>
   </head>
   <body>
@@ -204,19 +359,44 @@
 
       <div id="basic" class="tab-content active">
         <div class="form-group">
-          <label for="apiKey">API Key</label>
-          <input type="text" id="apiKey" placeholder="sk-..." />
+          <div class="form-row">
+            <label for="apiKey">API Key</label>
+            <input type="text" id="apiKey" placeholder="sk-..." />
+          </div>
         </div>
 
         <div class="form-group">
-          <label for="apiEndpoint">API 端点（可选）</label>
-          <input type="text" id="apiEndpoint" placeholder="https://api.openai.com/v1/chat/completions" />
+          <div class="form-row">
+            <label for="apiEndpoint">API 端点</label>
+            <input type="text" id="apiEndpoint" placeholder="https://api.openai.com/v1/chat/completions" />
+          </div>
         </div>
 
         <div class="form-group">
-          <label for="model">模型名称</label>
-          <input type="text" id="model" placeholder="gpt-3.5-turbo" />
-          <small style="color: var(--content-light); margin-top: 4px; font-size: 12px">例如：gpt-3.5-turbo, chatglm_turbo 等</small>
+          <div class="form-row">
+            <label for="model">模型名称</label>
+            <div class="input-with-hint">
+              <input type="text" id="model" placeholder="gpt-3.5-turbo" />
+              <small>例如：gpt-3.5-turbo, chatglm_turbo 等</small>
+            </div>
+          </div>
+        </div>
+
+        <div class="form-group">
+          <div class="form-row">
+            <label for="maxLength">字数限制</label>
+            <div class="length-limit-control">
+              <div class="toggle">
+                <input type="checkbox" id="enableMaxLength" />
+                <span class="toggle-slider"></span>
+              </div>
+              <div class="length-input ${enableMaxLength ? '' : 'disabled'}">
+                <input type="number" id="maxLength" placeholder="2000" disabled />
+                <span class="unit">字</span>
+              </div>
+            </div>
+          </div>
+          <small class="hint">启用后，提交给AI的内容超过字数的部分将被截断。建议设置在 1000-3000 之间</small>
         </div>
 
         <div class="button-group">
@@ -229,7 +409,7 @@
           <table class="categories-table">
             <thead>
               <tr>
-                <th style="width: 40%">分类</th>
+                <th style="width: 36%">分类</th>
                 <th>描述</th>
               </tr>
             </thead>
@@ -240,10 +420,8 @@
         </div>
 
         <div class="button-group" style="margin-top: 15px">
-          <button id="refreshCategories" class="secondary-button"><span>🔄</span> 从 Cubox 更新分类</button>
-          <div id="categoryStatus" class="status" style="margin-right: auto"></div>
-
-          <button id="saveCategoriesButton" class="primary-button">保存分类设置</button>
+          <button id="refreshCategories" class="primary-button" style="margin-right: auto">从 Cubox 更新分类</button>
+          <div id="categoryStatus" class="status" style="margin-left: auto"></div>
         </div>
       </div>
 
