--- a/popup.html
+++ b/popup.html
@@ -537,6 +537,15 @@
 
           <div id="hotkeysSettings" style="margin-top: 12px; display: none">
             <div class="hotkey-row">
+              <span class="hotkey-label">AI 分类</span>
+              <label class="toggle">
+                <input type="checkbox" id="enableAiHotkey" />
+                <span class="toggle-slider"></span>
+              </label>
+              <input type="text" id="aiHotkey" class="hotkey-input" placeholder="按键" value="F" />
+            </div>
+
+            <div class="hotkey-row">
               <span class="hotkey-label">切换星标</span>
               <label class="toggle">
                 <input type="checkbox" id="enableStarHotkey" />
